[package]
name = "wsbx"
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
description = "A type-safe Rust API for controlling Windows Sandbox, through the `wsb` CLI"
readme = "README.md"
repository = "https://github.com/gifnksm/wsbx"
license = "MIT OR Apache-2.0"
keywords = ["windows", "sandbox", "cli", "wsb"]
categories = ["api-bindings", "os::windows-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
maintenance = true
license = { link = "#license" }
crates-io = true
docs-rs = true
rust-version = true
github-actions = { workflows = "ci.yml" }
codecov = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
uuid = { version = "1.23.0", features = ["serde"] }
[dev-dependencies]
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
indoc = "2.0.7"
[build-dependencies]

[profile.dev]

[profile.release]

[badges]
maintenance = { status = "actively-developed" }
